<resources>
    <!-- Activity Main -->
    <string name="app_name">Save Forest</string>
    <string name="fail_message">Se ha producido un error al cargar la aplicación</string>

    <!-- Navigation View -->
    <string name="nav_header_title">Save the Forest</string>
    <string name="nav_header_subtitle">Protege lo que más importa</string>
    <string name="new_advice">Nuevo aviso</string>
    <string name="history_advice">Historial de avisos</string>
    <string name="aboutUs">Acerca de &#8230;</string>
    <string name="download">Descargar el manual</string>
    <string name="menu_more_options">Más opciones</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>

    <!-- AppBar Menu -->
    <string name="help_button">Ayuda</string>
    <string name="action_settings">Ajustes</string>

    <!-- Activity Start -->
    <string name="title">Formulario de nuevo aviso</string>
    <string name="write_name">Su nombre completo aquí</string>
    <string name="call_me">¿Quieres que te llamemos?</string>
    <string name="next_activity">Continuar</string>
    <string name="message_form">Debe introducir un nombre</string><!-- Este ya no se usa aquí-->
    <string name="error_required_field">Campo obligatorio</string>
    <string name="fail_message_start_activity">Se ha producido un error y no se podrá enviar avisos. \\nCierre la aplicación y inténtelo más tarde.</string>


    <!-- Activity FormStepB -->
    <string name="title_activity_form_step_bavtivity">Formulario de llamada</string>
    <string name="thanks">Muchas gracias</string>
    <string name="message">En breve recibirá una llamada.</string>
    <string name="phone_number">Su número de teléfono aquí</string>
    <string name="phone_number_title">Número de teléfono</string>

    <!-- Activity FormStepA -->
    <string name="title_activity_form_step_a">Formulario de aviso</string>
    <string-array name="tabs_name">
        <item>Paso 1</item>
        <item>Paso 2</item>
    </string-array>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Activity About Us -->
    <string name="author">José Juan Sosa Rodríguez</string>
    <string name="about_us_text">\t Este es el proyecto, creado para 3º de DAM del instituto IES El Rincón.
                                \n\n \t Esta aplicación está diseñada para que cualquier usuario pueda enviar una
                                notificación a servicios de emergencias y así evitar posibles catástrofes:
                                (Incendios, Desprendimientos, Accidentes &#8230;)</string>

    <!-- Activity History Advice -->
    <string name="title_activity_history_advice">Historial de avisos</string>

    <!-- Activity Help -->
    <string name="title_activity_help">Ayuda</string>
    <string-array name="help">
        <item>\t Introduzca su nombre y pulse continuar.\n\n\t Si marca la casilla de recibir una llamada,
            se le pedirá el número de teléfono y recibirá una llamada del servicio de emergencia lo antes posible.</item>
        <item>\t Seleccione o haga una fotografía con la cámara, estriba una breve descripción de la incidencia, marque
            la ubicación para hacer el aviso más exácto posible y por último rellene los datos requeridos.
            \n\n\t Al pulsar en enviar, los servicios de emergencia recibirán su aviso, puede que
            intenten ponerse en contacto con usted.</item>
        <item>\t Seleccione el país, introduzca su número de teléfono sin la extención de su país. \n\n \t
            Inserte una breve descripción de la incidencia. \n\t Recibirá una llamada del servicio de emergencia lo
            antes posible.</item>
        <item>\t Se muestra un listado de cada uno de los avisos realizados por este teléfono móvil.
            \n\n\t Al hacer clic sobre cualquiera de los avisos, se motrará toda la información de ese aviso.</item>
    </string-array>

    <!-- Fragment StepA Step1 -->
    <string name="button_photo">Añadir Foto</string>
    <string name="text_description">Introduce una breve descripción</string>
    <string name="button_next">Siguiente</string>

    <!-- Fragment StepA Step2 -->
    <string name="title_countries">Seleccione el país</string>
    <string name="gps">Añadir la ubicación GPS</string>
    <string name="send_step_a">Enviar</string>
    <string name="mark">Su posición es: (</string>
    <string name="permission_denied">Debe dar permisos a la aplicación o habilitar el GPS, para añadir la ubicación GPS.</string>
    <string name="validate_location">Debe añadir la ubicación</string>
    <string name="fail_load_countries">No se ha podido cargar el listado de paises.</string>
    <string name="tag">Aviso</string>
    <string name="fail_save_advice">No se ha guardado el aviso por un error en el proveedor de contenidos</string>
    <string name="congrat_save_advice">Se ha guardado el aviso en el proveedor de contenidos</string>

    <!-- Activity FinishAdvice-->
    <string name="title_activity_finish_advice">Aviso enviado</string>
    <string name="message_finish">Su aviso ha sido enviado.</string>

    <!-- Edit Advice from History Advices -->
    <string name="context_menu_delete">Borrar</string>
    <string name="context_menu_edit">Editar</string>
    <string name="title_activity_update_advice">Actualizar aviso</string>
    <string name="id_advice">Identificador de aviso: </string>
    <string name="description">Descripción</string>
    <string name="advices_is_empty">El historial de avisos está vacío</string>

    <!-- Show Advice from History Advices -->
    <string name="title_activity_show_advice">Aviso nº:</string>
    <string name="date">Fecha</string>
    <string name="location">Ubicación</string>
    <string name="mark_show_advice">La ubicación del aviso es:</string>
    <string name="fail_save_image_file">Se ha producido un error al intentar guardar la imagen en el dispositivo.</string>
    <string name="fail_load_image_from_file">Error al cargar la imagen del aviso.</string>

    <!-- Download Manual -->
    <string name="fail_connection_download">Conexíon de la descarga del manual no realizada correctamente</string>
    <string name="correct_connection_download">Se realizó la descarga correctamente</string>
    <string name="message_downloading">Descargando PDF&#8230;</string>
    <string name="not_found_pdf_viewer">Debe tener instalado un visor PDF para poder abrir el manual.</string>
    <string name="fail_save_manual">Error al guardar el documento</string>
    <string name="country_table_updated">Se ha actualizado la tabla paises.</string>

    <!-- Preferences -->
    <string name="administrator">Administrador</string>
    <string name="administrator_text">Sesión de administrador</string>
    <string name="language">Idioma</string>
    <string name="select_language">Seleccione el idioma</string>
    <string name="author_web">Web</string>
    <string name="web">https://jjsr.es</string>
    <string name="pref_array_default">Español</string>
    <string name="general_settings">Ajustes Generales</string>

</resources>
