<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newAdvice"
            android:icon="@drawable/ic_add_alert_black"
            android:checked="true"
            android:title="@string/new_advice" />
        <item
            android:id="@+id/nav_historyAdvice"
            android:icon="@drawable/ic_history_black"
            android:checkable="false"
            android:title="@string/history_advice" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_info_black"
            android:checkable="false"
            android:title="@string/aboutUs" />
        <item
            android:id="@+id/nav_action_settings"
            android:icon="@drawable/ic_menu_manage"
            android:checkable="false"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_download"
                android:icon="@drawable/ic_menu_download"
                android:checkable="false"
                android:title="@string/download"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
