<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.jjsr.saveforest.historyAdvicePackage.UpdateAdviceActivity"
    tools:showIn="@layout/activity_update_advice">

    <TextView
        android:id="@+id/textViewIdAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:text="@string/id_advice"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        style="@style/MainActivityStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="15dp"
        android:elevation="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/MainActivityStyle"/>

        <EditText
            android:id="@+id/updateTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="6"
            android:lines="6"
            android:maxLength="250"
            android:hint="@string/text_description"
            android:inputType="textMultiLine" />
    </LinearLayout>

</LinearLayout>
